# Ragworks

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-images.yml  ci.yml  edge.yml  release-pr.yml  release.yml
app/: AGENTS.md
app/api/: config.py  dependencies.py  main.py
app/chat/: __init__.py  branching.py  events.py  messages.py  persistence.py  run_loop.py  service.py  setup.py  state.py  streaming.py  tool_contexts.py  tools.py
app/core/: config.py  security.py
app/db/: engine.py  migrations.py  models.py  repositories.py  schema.py  session.py
app/evals/: __init__.py  collections.py  provisioning.py  service.py  wire.py
app/pipelines/: config.py  defaults.py  definition.py  diff.py  interface.py  node.py  registry.py  resolution.py  runtime.py  settings.py  tool_defaults.py  upgrades.py  validation.py  validation_declarations.py  validation_variables.py  variables.py
app/providers/: ollama.py  openrouter.py  tei.py
app/retrieval/: __init__.py
app/schemas/: app_config.py  auth.py  chat.py  collections.py  documents.py  enums.py  (+13 more)
docs/: DEVELOPMENT.md  sandbox-scenarios.md  sandbox.md
frontend/: .dockerignore  .prettierignore  AGENTS.md  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
sandbox/: AGENTS.md  cli.py
scripts/: __init__.py  backend_cli.py  bump_version.py  ensure_postgres.py  smoke_provider_reranking.py
tests/: conftest.py  test_module_size.py
(+571 files in other folders)
