[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transparent-rag"
version = "0.1.0"
description = "Modular Pinecone-backed retrieval toolkit for TransparentRAG."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pinecone>=5.0.0",
    "sentence-transformers>=2.5.1",
    "pydantic>=2.6.0",
    "pypdf>=4.0.0",
    "fastapi>=0.111.0,<0.126",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "httpx>=0.27.0",
    "openai>=1.30.5",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "tiktoken>=0.5.0",
    "pydantic-settings>=2.2.1",
    "email-validator>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
# This repository is an "application-style" layout (run from the repo root).
# Avoid packaging/installing the project itself; just manage dependencies + venv.
package = false
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["app"]
